// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Package Parse alternative 1`] = `
{
  "author": "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  "bin": {
    "name": "./path/to/program/index.js",
    "shortname": "./path/to/program/index.js",
  },
  "browser": "lib/index.js",
  "bugs": "https://github.com/owner/project/issues",
  "bundledDependencies": [
    "render-blender",
    "super-streams",
  ],
  "config": {
    "port": "8080",
  },
  "contributors": [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "cpu": [
    "!arm",
    "ia32",
    "x64",
  ],
  "dependencies": {
    "asd": "http://asdf.com/asdf.tar.gz",
    "bar": ">=1.0.2 <2.1.2",
    "baz": ">1.0.2 <=2.3.4",
    "boo": "2.0.1",
    "dyl": "file:../dyl",
    "elf": "~1.2.3",
    "foo": "1.0.0 - 2.9999.9999",
    "lat": "latest",
    "qux": "<1.0.0 || >=2.3.1 <2.4.5 || >=2.5.2 <3.0.0",
    "thr": "3.3.x",
    "til": "~1.2",
    "two": "2.x",
  },
  "description": "package description",
  "devDependencies": {
    "super-script": "~1.6.3",
  },
  "directories": {
    "bin": "local/binaries",
    "jars": "java",
    "lib": "src/lib",
  },
  "engines": {
    "node": ">=0.10.3 <15",
  },
  "exports": {
    "./feature": {
      "default": "./feature.js",
      "node": "./feature-node.js",
    },
    "default": "./feature.mjs",
    "node": {
      "import": "./feature-node.mjs",
      "require": "./feature-node.cjs",
    },
  },
  "files": [
    "__tests__/*.*",
  ],
  "funding": [
    {
      "type": "individual",
      "url": "http://example.com/donate",
    },
    "http://example.com/donateAlso",
    {
      "type": "patreon",
      "url": "https://www.patreon.com/my-account",
    },
  ],
  "homepage": "https://github.com/owner/project#readme",
  "imports": {
    "#dep": {
      "default": "./dep-polyfill.js",
      "node": "dep-node-native",
    },
    "#internal/*": "./src/internal/*.js",
  },
  "keywords": [
    "jest",
    "test",
  ],
  "license": "SEE LICENSE IN LICENSE_FILE",
  "maintainers": [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "man": [
    "./man/bar.1",
    "./man/foo.1",
  ],
  "name": "@scope/package",
  "optionalDependencies": {
    "some-pkg": "1.x",
  },
  "os": [
    "!win32",
    "darwin",
    "linux",
  ],
  "peerDependencies": {
    "soy-milk": "1.2",
    "tea": "2.x",
  },
  "peerDependenciesMeta": {
    "soy-milk": {
      "optional": true,
    },
  },
  "private": true,
  "publishConfig": {
    "allow-same-version": true,
  },
  "repository": "gitlab:user/repo",
  "scripts": {
    "compress": "{{ run command to compress files }}",
    "prepare": "command -o lib/ -c src/index.js",
  },
  "type": "module",
  "types": "lib/index.d.ts",
  "version": "1.0.1",
  "workspaces": [
    "./packages/*",
  ],
}
`;

exports[`Package Parse base 1`] = `
{
  "author": "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  "bin": {
    "test": "lib/index.js",
  },
  "bugs": {
    "email": "project@hostname.com",
    "url": "https://github.com/owner/project/issues",
  },
  "bundledDependencies": [
    "render-blender",
    "super-streams",
  ],
  "config": {
    "port": "8080",
  },
  "contributors": [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "cpu": [
    "!arm",
    "ia32",
    "x64",
  ],
  "dependencies": {
    "asd": "http://asdf.com/asdf.tar.gz",
    "bar": ">=1.0.2 <2.1.2",
    "baz": ">1.0.2 <=2.3.4",
    "boo": "2.0.1",
    "dyl": "file:../dyl",
    "elf": "~1.2.3",
    "foo": "1.0.0 - 2.9999.9999",
    "lat": "latest",
    "qux": "<1.0.0 || >=2.3.1 <2.4.5 || >=2.5.2 <3.0.0",
    "thr": "3.3.x",
    "til": "~1.2",
    "two": "2.x",
  },
  "description": "package description",
  "devDependencies": {
    "super-script": "~1.6.3",
  },
  "directories": {
    "bin": "local/binaries",
    "jars": "java",
    "lib": "src/lib",
  },
  "engines": {
    "node": ">=0.10.3 <15",
  },
  "exports": "./lib/index.js",
  "files": [
    "__tests__/*.*",
  ],
  "funding": [
    {
      "type": "individual",
      "url": "http://example.com/donate",
    },
  ],
  "homepage": "https://github.com/owner/project#readme",
  "keywords": [
    "jest",
    "test",
  ],
  "license": "(MIT OR Apache-2.0)",
  "maintainers": [
    "Barney Rubble <b@rubble.com> (http://barnyrubble.tumblr.com/)",
  ],
  "man": [
    "./man/doc.1",
  ],
  "name": "test",
  "optionalDependencies": {
    "some-pkg": "1.x",
  },
  "os": [
    "!win32",
    "darwin",
    "linux",
  ],
  "peerDependencies": {
    "soy-milk": "1.2",
    "tea": "2.x",
  },
  "peerDependenciesMeta": {
    "soy-milk": {
      "optional": true,
    },
  },
  "publishConfig": {
    "allow-same-version": true,
  },
  "repository": {
    "directory": "packages/react-dom",
    "type": "git",
    "url": "https://github.com/facebook/react.git",
  },
  "scripts": {
    "compress": "{{ run command to compress files }}",
    "prepare": "command -o lib/ -c src/index.js",
  },
  "type": "module",
  "types": "lib/index.d.ts",
  "version": "1.0.1",
  "workspaces": [
    "./packages/*",
  ],
}
`;
